# aws-iot-device-sdk-embedded-C

./: .gitmodules  CMakeLists.txt
demos/: CMakeLists.txt
demos/mqtt/mqtt_demo_mutual_auth_mqtt5/: CMakeLists.txt  core_mqtt_config.h  demo_config.h  mqtt_demo_mutual_auth_mqtt5.c
